    * 0359 FIX: Fixed exception in event simulator when one match group did not match
    * 0384 FIX: Trying to prevent problem when restarting mkeventd...
    * 0427 FIX: Fixed exception when handling connections from event unix socket...
    * 0679 FIX: Allow non-Ascii characters in generated events
    * 0680 FIX: Do not allow spaces in host names in event simulator...

    Livestatus:
    * 0337 New header for limiting the execution time of a query...
    * 0276 nagios4 livestatus support...
    * 0335 FIX: Parse state of downtime notification log entries correctly...
    * 0336 FIX: Limit the number of lines read from a single logfile...
    * 0344 FIX: Fix semantics of columns num_services_hard_*...

    Livestatus-Proxy:
    * 0263 FIX: livestatus log table: fixed missing logentries of archived logfiles...


1.2.3i7:
    Core & Setup:
    * 0011 Introduce optional lower limit for predicted levels...
    * 0217 FIX: More verbose error output for SNMP errors on the command line...
    * 0288 FIX: Error messages of datasource programs (e.g. VSphere Agent) are now visible within WATO...
    * 0010 FIX: Fix computation of hour-of-the-day and day-of-month prediction...
    * 0292 FIX: Inline SNMP: Check_MK check helpers are closing UDP sockets now...

    Checks & Agents:
    * 0060 cisco_fantray: new check for monitoring fan trays of Cisco Nexus switches
    * 0061 cisco_cpu: check now recognizes new object cpmCPUTotal5minRev...
    * 0063 veeam_client: new check to monitor status of veeam clients with special agent plugin...
    * 0064 veeam_jobs: new check to monitor the backup jobs of the veeam backup tool...
    * 0047 fritz.conn fritz.config fritz.uptime fritz.wan_if fritz.link: New checks for monitoring Fritz!Box devices...
    * 0027 esx_vsphere_sensors: it is now possible override the state of sensors...
    * 0090 apc_ats_status: New Check for monitoring APC Automatic Transfer Switches