@@ -306,6 +306,7 @@
     * 0427 FIX: Fixed exception when handling connections from event unix socket...
     * 0679 FIX: Allow non-Ascii characters in generated events
     * 0680 FIX: Do not allow spaces in host names in event simulator...
+    * 0672 FIX: Service item of "Check event state in event console" checks can now be configured...
 
     Livestatus:
     * 0337 New header for limiting the execution time of a query...
